Update FXML namespace and correcte modules for launcher